# Credit_Card_Recommender

./: #.gitignore#  .gitignore  .gitignore~  CMakeLists.txt  Card.cpp  Card.h  Parser.cpp  Parser.h  README.md  cards.csv  main.cpp
GUI/: CMakeCache.txt  Makefile  cmake_install.cmake  creditCardGui  ui_mainwindow.h
GUI/creditCardGui_autogen/UVLADIE3JM/: moc_mainwindow.cpp
GUI/creditCard_gui/: CMakeLists.txt  resources.qrc
GUI/creditCard_gui/forms/: mainwindow.ui  recources.qrc
GUI/creditCard_gui/src/: cards.csv  main.cpp  mainwindow.cpp  mainwindow.h
build-creditCard_gui-Desktop_Qt_5_11_0_clang_64bit-Debug/: .qmake.stash  Makefile  moc_mainwindow.cpp  ui_mainwindow.h
build-creditCard_gui-Desktop_Qt_5_11_0_clang_64bit-Debug/creditCard_gui.app/Contents/: Info.plist
build-creditCard_gui-Desktop_Qt_5_11_0_clang_64bit-Debug/creditCard_gui.app/Contents/MacOS/: creditCard_gui
creditCard_gui/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
creditCard_gui-old/: creditCard_gui.pro  main3.cpp  mainwindow.cpp  mainwindow.h
data/: Discover-2017-YearEndSummary.csv  generated_transactions.csv
